--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -11,10 +11,14 @@ jobs:
 
     - name: Stop Server
       run: | 
-        curl -X POST "https://game-admin.kscloud.co.uk/api/client/servers/c0c7c961/power" -H 'Accept: application/json' -H 'Content-Type: application/json' -H 'Authorization: Bearer "${{ secrets.KSCLOUD_API }}"' \ 
+        curl "https://pterodactyl.file.properties/api/client/servers/1a7ce997/power" \
+        -H 'Accept: application/json' \
+        -H 'Content-Type: application/json' \
+        -H 'Authorization: Bearer ${{ sercerts.KSCLOUD_API }}' \
+        -X POST \
         -d '{
         "signal": "start"
-        }'
+        }' 
 
 
 
