--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -17,9 +17,19 @@ jobs:
         -H 'Authorization: Bearer ${{ secrets.KSCLOUD_API }}' \
         -X POST \
         -d '{
-        "signal": "start"
+        "signal": "stop"
         }' 
 
+    - name: Start Server
+      run: | 
+        curl "https://game-admin.kscloud.co.uk/api/client/servers/c0c7c961/power" \
+        -H 'Accept: application/json' \
+        -H 'Content-Type: application/json' \
+        -H 'Authorization: Bearer ${{ secrets.KSCLOUD_API }}' \
+        -X POST \
+        -d '{
+        "signal": "start"
+        }' 
 
 
     
