--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -29,7 +29,7 @@ jobs:
       run: cp -R mods/* ${{ secrets.KSCLOUD_SERVERPATH }}/mods
 
     - name: Deploy new configs
-      run: cp -R configs/* ${{ secrets.KSCLOUD_SERVERPATH }}/configs
+      run: cp -R config/* ${{ secrets.KSCLOUD_SERVERPATH }}/config
 
     - name: Start Server
       run: | 
